Build self-contained APP bundle (non-MAS)